<resources>
    <string name="app_name">GradeReportApp</string>
    <string name="name_anupom_bhowmik">Name: ANUPOM BHOWMIK</string>
    <string name="id_22_49522_3">ID: 22-49522-3</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="department_computer_science_amp_engineering"><![CDATA[Department: Computer Science & Engineering]]></string>
    <string name="semester_spring_2026">Semester: Spring 2026</string>
</resources>